--- a/about.html
+++ b/about.html
@@ -79,13 +79,13 @@
                                                 <li><a href="index.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="services.html">Services</a></li>
-                                                <li><a href="blog.html">Blog</a>
+                                                <!--<li><a href="blog.html">Blog</a>
                                                     <ul class="submenu">
                                                         <li><a href="blog.html">Blog</a></li>
                                                         <li><a href="blog_details.html">Blog Details</a></li>
                                                         <li><a href="elements.html">Element</a></li>
                                                     </ul>
-                                                </li>
+                                                </li>-->
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
@@ -125,14 +125,19 @@
                     <div class="offset-xl-1 col-lg-8">
                         <div class="about-details-cap mb-50">
                             <h4>Our Mission</h4>
-                            <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.
+                            <p>Fundamental Frontiers is a premier management consulting firm dedicated to helping organizations achieve sustainable growth, operational excellence, and strategic transformation. With a team of seasoned consultants and industry experts, we partner with businesses across engineering, supply chain, automotive, Power generation, transmission, and distribution, hospitality and other industrial sectors to identify challenges, unlock opportunities, and implement solutions that deliver measurable results.
+
                              </p>
                              <p> Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
                         </div>
 
                         <div class="about-details-cap mb-50">
                             <h4>Our Vision</h4>
-                            <p>Consectetur adipiscing elit, sued do eiusmod tempor ididunt udfgt labore et dolore magna aliqua. Quis ipsum suspendisces gravida. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus.
+                            <p>At the heart of our approach is a commitment to collaboration and delivering value. Over the years, we have earned the trust of [specific client types, e.g., Fortune 500 companies, mid-sized firms, or startups], delivering successful outcomes such as revenue growth, cost savings, and improved organizational performance.
+
+
+                                Backed by over 75 years of combined multi-dimensional consulting experience; Fundamental Frontier Consulting stands ready to help your organization thrive in a rapidly evolving business landscape. Together, we can design and implement strategies that ensure long-term success.
+                                
                              </p>
                              <p> Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan lacus. Risus commodo viverra sebfd dho eiusmod tempor maecenas accumsan.</p>
                         </div>
@@ -185,7 +190,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                         <div class="single-team mb-30">
                             <div class="team-img">
-                                <img src="assets/img/gallery/team2.png" alt="">
+                                <img src="assets/img/gallery/team4.jpg" alt="">
                             </div>
                             <div class="team-caption">
                                 <h3><a href="#">Ethan Welch</a></h3>
