--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                                         <div class="main-menu d-none d-lg-block">
                                             <nav> 
                                                 <ul id="navigation">                                                                                          
-                                                    <li><a href="index.html">Home</a></li>
+                                                    <li><a href="staging.html">Home</a></li>
                                                     <li><a href="about.html">About</a></li>
                                                     <li><a href="services.html">Services</a></li>
                                                     <!--
