--- a/services.html
+++ b/services.html
@@ -76,7 +76,7 @@
                                     <div class="main-menu d-none d-lg-block">
                                         <nav> 
                                             <ul id="navigation">                                                                                          
-                                                <li><a href="index.html">Home</a></li>
+                                                <li><a href="staging.html">Home</a></li>
                                                 <li><a href="about.html">About</a></li>
                                                 <li><a href="services.html">Services</a></li>
                                                 <!--
@@ -139,8 +139,8 @@
                                 <span class="flaticon-development"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Strategy Planning </a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Compliance Certification, Auditing, Training </a></h5>
+                                <p>Integrated Management System (ISO 9001, ISO 14001, ISO 45001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
                             </div>
                         </div>
                     </div>
@@ -150,8 +150,8 @@
                                 <span class="flaticon-result"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Insurance Service</a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Lean & Six Sigma Training & Implementation</a></h5>
+                                <p>Continuous improvement by leveraging Lean and Six Sigma Methodologies. Eradication of process variation and waste.</p>
                             </div>
                         </div>
                     </div>
@@ -161,8 +161,8 @@
                                 <span class="flaticon-team"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Audit & Evaluation</a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Operational Excellence (OE) and Process Optimization</a></h5>
+                                <p>Positively impacting P&L of organizations through the use of OE and other Process Optimization tools.</p>
                             </div>
                         </div>
                     </div>
@@ -172,8 +172,8 @@
                                 <span class="flaticon-result"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Insurance Service</a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Supplier Development, and Performance Management</a></h5>
+                                <p>Building robusts supplier partnership from inception to finalization/on-boarding. Support in setting up of APQP (advanced product quality planning) and PPAP (Production Part Approval Process) programs based on AIAG requirements.</p>
                             </div>
                         </div>
                     </div>
@@ -183,8 +183,9 @@
                                 <span class="flaticon-team"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Audit & Evaluation</a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Data Integration, Visualization and Reporting</a></h5>
+                                <p>Data modeling using Power BI, Tableau and other business intelligence and AI tools
+Development of Business & Operations Score Cards based on Leading & Lagging Indicators.</p>
                             </div>
                         </div>
                     </div>
@@ -194,11 +195,33 @@
                                 <span class="flaticon-development"></span>
                             </div>
                             <div class="cat-cap">
-                                <h5><a href="services.html">Strategy Planning </a></h5>
-                                <p>There are many variations of passages of lorem Ipsum available but the new majority have suffered.</p>
+                                <h5><a href="services.html">Enterprise and Operational Risk Management </a></h5>
+                                <p>Use of Risk management tools for Business continuity planning, Disaster Recovery Planning,& Process, Design, Safety Failure Mode and Effect Analysis (FMEA).</p>
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center mb-50">
+                            <div class="cat-icon">
+                                <span class="flaticon-development"></span>
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">AI in Engineering</a></h5>
+                                <p>As we continue to witness the transformative power of AI in engineering, it’s incredible to reflect on some of the remarkable achievements we’ve seen recently. From optimizing design processes to enhancing predictive maintenance, AI is revolutionizing the way we approach engineering challenges like Generative Design,Smart Manufacturing, and Sustainability..</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center mb-50">
+                            <div class="cat-icon">
+                                <span class="flaticon-development"></span>
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Program and Project Management</a></h5>
+                                <p>In the dynamic world of business, project management plays a pivotal role in driving success and achieving organizational goals.</p>
+                            </div>
+                        </div>
+                    </div>                                        
                 </div>
             </div>
         </div>
