--- a/contact.html
+++ b/contact.html
@@ -51,12 +51,10 @@
                                         </ul>
                                     </div>
                                     <div class="header-info-right">
-                                        <ul class="header-social">    
-                                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                        </ul>
+                                <ul class="header-social">    
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                </ul>
                                     </div>
                                 </div>
                         </div>
@@ -244,10 +242,11 @@
                                 </div>
                                 <div class="footer-number">
                                     <h4><span>+564 </span>7885 3222</h4>
-                                    <p>youremail@gmail.com</p>
+                                    <p>contact@fundamentalfrontiers.com</p>
                                 </div>
                             </div>
                         </div>
+                        <!--
                         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -255,13 +254,13 @@
                                     <ul>
                                         <li><a href="#">Advanced</a></li>
                                         <li><a href="#"> Management</a></li>
-                                        <li><a href="#">Corporate</a></li>
-                                        <li><a href="#">Customer</a></li>
-                                        <li><a href="#">Information</a></li>
+
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                        -->
+                        <!--
                         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -276,6 +275,8 @@
                                 </div>
                             </div>
                         </div>
+                        -->
+                        <!--
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -284,7 +285,7 @@
                                         <p class="info1">Subscribe now to get daily updates</p>
                                     </div>
                                 </div>
-                                <!-- Form -->
+                                
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
                                         <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
@@ -300,6 +301,7 @@
                                 </div>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
                 <div class="footer-bottom">
@@ -315,9 +317,7 @@
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fas fa-globe"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
