--- a/services.html
+++ b/services.html
@@ -50,12 +50,10 @@
                                     </ul>
                                 </div>
                                 <div class="header-info-right">
-                                    <ul class="header-social">    
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                       <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                    </ul>
+                                <ul class="header-social">    
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                                </ul>
                                 </div>
                             </div>
                        </div>
@@ -227,6 +225,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
         </div>
         <!-- Services Area End -->
         <!-- Brand Area Start -->
+         <!--
         <div class="brand-area pb-140">
             <div class="container">
                 <div class="brand-active brand-border pb-40">
@@ -251,6 +250,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                 </div>
             </div>
         </div>
+    -->
         <!-- Brand Area End -->
     </main>
     <footer>
@@ -272,10 +272,11 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                 </div>
                                 <div class="footer-number">
                                     <h4><span>+564 </span>7885 3222</h4>
-                                    <p>youremail@gmail.com</p>
+                                    <p>contact@fundamentalfrontiers.com</p>
                                 </div>
                             </div>
                         </div>
+                        <!--
                         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -283,13 +284,13 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                     <ul>
                                         <li><a href="#">Advanced</a></li>
                                         <li><a href="#"> Management</a></li>
-                                        <li><a href="#">Corporate</a></li>
-                                        <li><a href="#">Customer</a></li>
-                                        <li><a href="#">Information</a></li>
+
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                        -->
+                        <!--
                         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -304,6 +305,8 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                 </div>
                             </div>
                         </div>
+                        -->
+                        <!--
                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-8">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
@@ -312,7 +315,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                         <p class="info1">Subscribe now to get daily updates</p>
                                     </div>
                                 </div>
-                                <!-- Form -->
+                                
                                 <div class="footer-form">
                                     <div id="mc_embed_signup">
                                         <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
@@ -328,6 +331,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                 </div>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
                 <div class="footer-bottom">
@@ -343,9 +347,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
                                 <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fas fa-globe"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
