--- a/contact.html
+++ b/contact.html
@@ -162,8 +162,8 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
-                                <h3>Buttonwood, California.</h3>
-                                <p>Rosemead, CA 91770</p>
+                                <h3>Head Office</h3>
+                                <p>Raleigh, North Carolina.</p>
                             </div>
                         </div>
                         <div class="media contact-info">
@@ -176,7 +176,7 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-email"></i></span>
                             <div class="media-body">
-                                <h3>support@colorlib.com</h3>
+                                <h3>contact@fundamentalfrontiers.com</h3>
                                 <p>Send us your query anytime!</p>
                             </div>
                         </div>
