--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
                                 <h3>Head Office</h3>
-                                <p>Raleigh, North Carolina.</p>
+                                <p>Powder Springs, GA.</p>
                             </div>
                         </div>
                         <div class="media contact-info">
