--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
                                 <img src="assets/img/gallery/team4.jpg" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="#">Saqib Mahmood</a></h3>
+                                <h3><a href="https://www.linkedin.com/in/saqib-mahmood-1b72b16/" target="_blank">Saqib Mahmood  -  <i class="fab fa-linkedin-in"></i></a></h3>
                                 <span>UX Designer</span>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                                 <img src="assets/img/gallery/junaid.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="#">Junaid Siddiqui</a></h3>
+                                <h3><a href="https://www.linkedin.com/in/junaid-siddiqui-b4b25a7/" target="_blank">Junaid Siddiqui  -  <i class="fab fa-linkedin-in"></i></a></h3>
                                 <span>UX Designer</span>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                                 <img src="assets/img/gallery/auj.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="#">Auj Zaman</a></h3>
+                                <h3><a href="https://www.linkedin.com/in/auj-zaman-8652452/" target="_blank">Auj Zamman  -  <i class="fab fa-linkedin-in"></i></a></h3>
                                 <span>UX Designer</span>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                                 <img src="assets/img/gallery/ammar.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="#">Muhammad Ammar</a></h3>
+                                <h3><a href="https://www.linkedin.com/in/saqibsidiqe/" target="_blank">Muhammad Ammar  -  <i class="fab fa-linkedin-in"></i></a></h3>
                                 <span>UX Designer</span>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
                                 <img src="assets/img/gallery/saqib.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="#">Saqib Siddiqui</a></h3>
+                                <h3><a href="https://www.linkedin.com/in/saqibsidiqe/" target="_blank">Saqib Siddiqui  -  <i class="fab fa-linkedin-in"></i></a></h3>
                                 <span>UX Designer</span>
                             </div>
                         </div>
