--- a/services.html
+++ b/services.html
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="header-info-right">
                                 <ul class="header-social">    
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-twitter"></i></a></li>-->
                                     <li><a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                                 </div>
@@ -219,7 +219,18 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                 <p>In the dynamic world of business, project management plays a pivotal role in driving success and achieving organizational goals.</p>
                             </div>
                         </div>
-                    </div>                                        
+                    </div>    
+                    <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div class="single-cat text-center mb-50">
+                            <div class="cat-icon">
+                                <span class="flaticon-development"></span>
+                            </div>
+                            <div class="cat-cap">
+                                <h5><a href="services.html">Balanced Scorecard</a></h5>
+                                <p>We help organizations to develop a Balanced Scorecard (both business and operational) based on a strategic framework that aligns vision, strategy, and objectives across four dimensions: financial, customer, internal business, and learning.</p>
+                            </div>
+                        </div>
+                    </div>                                                         
                 </div>
             </div>
         </div>
@@ -271,7 +282,7 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                                     </div>
                                 </div>
                                 <div class="footer-number">
-                                    <h4><span>+564 </span>7885 3222</h4>
+                                    <h4><span>+1 404 </span>779 9001</h4>
                                     <p>contact@fundamentalfrontiers.com</p>
                                 </div>
                             </div>
@@ -344,9 +355,11 @@ Development of Business & Operations Score Cards based on Leading & Lagging Indi
                             </div>
                         </div>
                         <div class="col-xl-3 col-lg-4">
-                            <!-- Footer Social -->
+                            <!-- Footer Social
+                            <a href="#"><i class="fab fa-twitter"></i></a> 
+                            -->
                             <div class="footer-social f-right">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                
                                 <a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
