--- a/staging.html
+++ b/staging.html
@@ -51,7 +51,7 @@
                             </div>
                             <div class="header-info-right">
                                 <ul class="header-social">    
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-twitter"></i></a></li>-->
                                     <li><a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                             </div>
@@ -223,12 +223,13 @@
         </div>
     </div>
     <!-- About Area End-->
-    <!--? Services Ara Start -->
+    <!-- Services Ara Start -->
+    <!--
     <div class="services-area section-padding3">
         <div class="container">
             <div class="row">
                 <div class="cl-xl-7 col-lg-8 col-md-10">
-                    <!-- Section Tittle -->
+                    
                     <div class="section-tittle mb-70">
                         <span>Our Portfolios of cases</span>
                         <h2>Featured Case Study</h2>
@@ -283,6 +284,7 @@
             </div>
         </div>
     </div>
+    -->
     <!-- Services Ara End -->
     <!--? Testimonial Start -->
     <!--
@@ -555,7 +557,7 @@
                                     </div>
                                 </div>
                                 <div class="footer-number">
-                                    <h4><span>+564 </span>7885 3222</h4>
+                                    <h4><span>+1 404 </span>779 9001</h4>
                                     <p>contact@fundamentalfrontiers.com</p>
                                 </div>
                             </div>
@@ -630,7 +632,7 @@
                         <div class="col-xl-3 col-lg-4">
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                
                                 <a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
