--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="header-info-right">
                                 <ul class="header-social">    
-                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-twitter"></i></a></li>-->
                                     <li><a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                                 </ul>
                                 </div>
@@ -396,7 +396,7 @@
                                     </div>
                                 </div>
                                 <div class="footer-number">
-                                    <h4><span>+564 </span>7885 3222</h4>
+                                    <h4><span>+1 404 </span>779 9001</h4>
                                     <p>contact@fundamentalfrontiers.com</p>
                                 </div>
                             </div>
@@ -471,7 +471,7 @@
                         <div class="col-xl-3 col-lg-4">
                             <!-- Footer Social -->
                             <div class="footer-social f-right">
-                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                
                                 <a href="https://www.linkedin.com/company/fundamental-frontiers" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
