--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://www.linkedin.com/in/saqib-mahmood-1b72b16/" target="_blank">Saqib Mahmood  -  <i class="fab fa-linkedin-in"></i></a></h3>
-                                <span>UX Designer</span>
+                                <span>Managing Partner</span>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://www.linkedin.com/in/junaid-siddiqui-b4b25a7/" target="_blank">Junaid Siddiqui  -  <i class="fab fa-linkedin-in"></i></a></h3>
-                                <span>UX Designer</span>
+                                <span>Managing Partner</span>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://www.linkedin.com/in/auj-zaman-8652452/" target="_blank">Auj Zamman  -  <i class="fab fa-linkedin-in"></i></a></h3>
-                                <span>UX Designer</span>
+                                <span>Managing Partner</span>
                             </div>
                         </div>
                     </div>
@@ -226,8 +226,8 @@
                                 <img src="assets/img/gallery/ammar.png" alt="">
                             </div>
                             <div class="team-caption">
-                                <h3><a href="https://www.linkedin.com/in/saqibsidiqe/" target="_blank">Muhammad Ammar  -  <i class="fab fa-linkedin-in"></i></a></h3>
-                                <span>UX Designer</span>
+                                <h3><a href="https://www.linkedin.com/in/m-a-faruqi/" target="_blank">Muhammad Ammar  -  <i class="fab fa-linkedin-in"></i></a></h3>
+                                <span>Consulting Partner</span>
                             </div>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             </div>
                             <div class="team-caption">
                                 <h3><a href="https://www.linkedin.com/in/saqibsidiqe/" target="_blank">Saqib Siddiqui  -  <i class="fab fa-linkedin-in"></i></a></h3>
-                                <span>UX Designer</span>
+                                <span>Consulting Partner</span>
                             </div>
                         </div>
                     </div>
