--- a/staging.html
+++ b/staging.html
@@ -165,7 +165,6 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Compliance Certification, Auditing, Training</a></h5>
-                            <p>Integrated Management System (ISO 9001, ISO 14001, ISO 45001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
                         </div>
                     </div>
                 </div>
@@ -176,7 +175,6 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Lean & Six Sigma Training & Implementation</a></h5>
-                            <p>Continuous improvement by leveraging Lean and Six Sigma Methodologies. Eradication of process variation and waste..</p>
                         </div>
                     </div>
                 </div>
@@ -187,11 +185,79 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Operational Excellence (OE) and Process Optimization </a></h5>
-                            <p>Building robust supplier partnership from inception to finalization/on-boarding. Support in setting up of APQP (advanced product quality planning) and PPAP (Production Part Approval Process) programs based on AIAG requirements.</p>
+
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-development"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">Supplier Development, and Performance Management</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-result"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">Data Integration, Visualization and Reporting</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-team"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">Enterprise and Operational Risk Management </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-development"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">AI in Engineering</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-result"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">Program and Project Management</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-cat text-center mb-50">
+                        <div class="cat-icon">
+                            <span class="flaticon-team"></span>
+                        </div>
+                        <div class="cat-cap">
+                            <h5><a href="services.html">Balanced Scorecard</a></h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
     <!-- Services Area End -->
