--- a/staging.html
+++ b/staging.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DX954J7XDQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DX954J7XDQ');
+</script>
+
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Fundamental Frontiers Consulting</title>
@@ -662,11 +673,7 @@
                                 <div class="footer-logo">
                                     <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                                 </div>
-                                <div class="footer-tittle">
-                                    <div class="footer-pera">
-                                        <p class="info1">Receive updates and latest news direct from Simply enter.</p>
-                                    </div>
-                                </div>
+
                                 <div class="footer-number">
                                     <h4><span>+1 404 </span>779 9001</h4>
                                     <p>contact@fundamentalfrontiers.com</p>
