--- a/contact.html
+++ b/contact.html
@@ -54,10 +54,7 @@
                         <div class="col-xl-12">
                                 <div class="row d-flex justify-content-between align-items-center">
                                     <div class="header-info-left">
-                                        <ul>     
-                                            <li><i class="far fa-clock"></i> Mon - SAT: 6.00 am - 10.00 pm</li>
-                                            <li>Sun:  Closed</li>
-                                        </ul>
+                   
                                     </div>
                                     <div class="header-info-right">
                                 <ul class="header-social">    
@@ -144,7 +141,7 @@
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
                                 <h3>Head Office</h3>
-                                <p>Powder Springs, GA.</p>
+                                <p>Atlanta, GA.</p>
                             </div>
                         </div>
                         <div class="media contact-info">
