--- a/services.html
+++ b/services.html
@@ -54,10 +54,7 @@
                        <div class="col-xl-12">
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left">
-                                    <ul>     
-                                        <li><i class="far fa-clock"></i> Mon - SAT: 6.00 am - 10.00 pm</li>
-                                        <li>Sun:  Closed</li>
-                                    </ul>
+             
                                 </div>
                                 <div class="header-info-right">
                                 <ul class="header-social">    
@@ -148,7 +145,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Compliance Certification, Auditing, Training </a></h5>
-                                <p>Integrated Management System (ISO 9001, ISO 14001, ISO 45001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
+                                <p>Integrated Management System (ISO 9001, ISO 14001, ISO 45001, ISO 27001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
                             </div>
                         </div>
                     </div>
