--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,12 @@
         <section class="contact-section">
             <div class="container">
 
-
+<!--
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d53010.522133852784!2d-84.7250107632143!3d33.85982819658416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1747672790008!5m2!1sen!2sus" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-<div class="row">
+-->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d212360.2669967108!2d-84.3652912679732!3d33.73130644087814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1750523742480!5m2!1sen!2sus" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="row">
+    
                     <div class="col-12">
                         <h2 class="contact-title">Get in Touch</h2>
                     </div>
