--- a/services.html
+++ b/services.html
@@ -145,7 +145,7 @@
                             </div>
                             <div class="cat-cap">
                                 <h5><a href="services.html">Compliance Certification, Auditing, Training </a></h5>
-                                <p>Integrated Management System (ISO 9001, ISO 14001, ISO 45001, ISO 27001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
+                                <p>Integrated Management System (ISO 9001, ISO 13485, ISO 14001, ISO 45001, ISO 27001, IATF 16949) Certification, Internal/External Auditing and Training.</p>
                             </div>
                         </div>
                     </div>
